<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorBackground_app">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="182dp"
                        android:layout_gravity="center"
                        android:background="@color/colorBackground_app"
                        android:src="@drawable/policeofficer_man"/>

                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/colorBlank"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/text_log">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="6dp"
                        android:inputType="text|textEmailAddress"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/pass_log">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_alt"
                        android:drawablePadding="6dp"
                        android:inputType="textPassword"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:onClick="principal"
                    android:text="@string/text_btn_log"
                    android:textColor="@color/colorBlank"
                    android:textSize="24dp"
                    app:cornerRadius="350in" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:onClick="recuperar"
                    android:text="@string/text_fog"
                    android:textAlignment="center"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_quest_signup"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/txt_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_signup"
                        android:textAlignment="center"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>