<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RestablecerClave">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:background="@color/colorBackground_app">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/back_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="182dp"
                android:layout_gravity="center"
                android:src="@drawable/pass1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="25dp"
                android:text="@string/text_restablecer"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regcontrasena">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regrepcontrasena">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="resstablecer"
                android:text="@string/btn_restablecer"
                android:textColor="@color/colorBlank"
                android:textSize="24dp"
                app:cornerRadius="350in" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>