<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reporte">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:background="@color/colorBackground_app">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/back_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="159dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/carrocolor" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/text_combo">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/android_material_design_spinner"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp">


                </com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="120dp"
                android:layout_marginTop="25dp"
                android:hint="@string/text_descripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"

                android:hint="@string/text_fecha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="128dp"
                    android:clickable="false"
                    android:cursorVisible="false"

                    android:focusable="false"
                    android:focusableInTouchMode="false"

                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/text_anonimo">

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="280dp"

                    ></Switch>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="-25dp"
                    android:layout_marginRight="100dp"
                    android:text="Anónimo"
                    tools:text="Anónimo" />

                <Button
                    android:id="@+id/btnCamara"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"

                    android:layout_marginTop="-35dp"
                    android:onClick="cam"
                    app:icon="@drawable/camara" />



            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imgCamara"
                android:layout_width="156dp"
                android:layout_height="159dp"
                android:layout_gravity="left"
                android:src="@drawable/carrocolor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"

                android:layout_marginEnd="20dp"
                android:onClick="registrar"
                android:text="@string/btn_enviare"
                android:textColor="@color/colorBlank"
                android:textSize="24dp"
                app:cornerRadius="350in" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>