<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:background="@color/colorBackground_app">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/back_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/mensajeconfirma"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_mensaje"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="40dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/text_recupera">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/confirma"
                    android:drawablePadding="6dp"
                    android:inputType="text|number"
                    android:textSize="20dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnviarCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"

                android:layout_marginEnd="20dp"
                android:onClick="recuperar"
                android:text="@string/btn_enviar"
                android:textColor="@color/colorBlank"
                android:textSize="24dp"
                app:cornerRadius="350in" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>